[gd_scene load_steps=6 format=3 uid="uid://1taoydfjd14q"]

[ext_resource type="Script" uid="uid://v84nibqomwyu" path="res://world/icon.gd" id="1_hqyvl"]
[ext_resource type="Shader" uid="uid://dvt8hh1hyq3e" path="res://shaders/icon.gdshader" id="2_ostuu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ostuu"]
render_priority = 0
shader = ExtResource("2_ostuu")
shader_parameter/line_length = 0.0
shader_parameter/line_color = Vector3(0, 0, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_hqyvl"]
material = SubResource("ShaderMaterial_ostuu")
top_radius = 0.03
bottom_radius = 0.03
height = 4.7169905

[sub_resource type="SphereShape3D" id="SphereShape3D_hqyvl"]
radius = 1.0

[node name="Icon" type="Node3D"]
script = ExtResource("1_hqyvl")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 0, 0)
billboard = 1
no_depth_test = true
render_priority = 1

[node name="Label3D" type="Label3D" parent="."]
offset = Vector2(50, 0)
billboard = 1
no_depth_test = true
render_priority = 1
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
font_size = 80
horizontal_alignment = 0

[node name="LineNode" type="Node3D" parent="."]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 0, 0)
visible = false

[node name="Line" type="MeshInstance3D" parent="LineNode"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, 1, 1, -4.371139e-08, 0, 4.371139e-08, 1, -4.371139e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_hqyvl")
skeleton = NodePath("../..")

[node name="VisibleArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisibleArea"]
shape = SubResource("SphereShape3D_hqyvl")

[node name="ClickableArea" type="Area3D" parent="."]
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClickableArea"]
shape = SubResource("SphereShape3D_hqyvl")
